--- a/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
@@ -91,7 +91,7 @@
                     </a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="index_v1.html" data-index="0">数字字典</a>
+                            <a class="J_menuItem" href="/dict" data-index="0">数字字典</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="index_v2.html">小区管理</a>
