小区管理模块  根据条件查询小区信息

--- a/web/web-admin/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -101,7 +101,7 @@
                             </tbody>
                         </table>
 <!--                        <div class="row" th:include="common/pagination :: pagination"></div>-->
-                        <div class="row" th:include="common/page :: page"></div>
+                        <div class="row" th:include="common/pagination :: pagination"></div>
                     </div>
                 </div>
             </div>
