--- a/web/web-admin/src/main/webapp/WEB-INF/templates/common/pagination.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/common/pagination.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="row" th:fragment="page">
+<div class="row" th:fragment="pagination">
     <input type="hidden" name="pageSize" id="pageSize" th:value="${page.pageSize}"/>
     <input type="hidden" name="pageNum" id="pageNum" th:value="${page.pageNum}"/>
     <div class="col-sm-6">
