--- a/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
@@ -94,7 +94,7 @@
                             <a class="J_menuItem" href="/dict" data-index="0">数字字典</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="index_v2.html">小区管理</a>
+                            <a class="J_menuItem" href="/community">小区管理</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="index_v3.html">房源管理</a>
