房源管理模块  根据条件查询房源信息 页面

--- a/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
@@ -97,7 +97,7 @@
                             <a class="J_menuItem" href="/community">小区管理</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="index_v3.html">房源管理</a>
+                            <a class="J_menuItem" href="/house">房源管理</a>
                         </li>
                     </ul>
                 </li>
