房源管理模块  新增房源

--- a/web/web-admin/src/main/webapp/WEB-INF/templates/house/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/house/index.html
@@ -148,4 +148,13 @@
     </div>
 </form>
 </body>
+<script th:inline="javascript">
+    //新增房源
+    $(function () {
+        $(".create").on("click", function () {
+            opt.openWin('/house/create', '新增', 630, 430)
+        });
+    });
+    //
+</script>
 </html>
