房源管理模块  增 删 改 发布功能

--- a/web/web-admin/src/main/webapp/WEB-INF/templates/house/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/house/index.html
@@ -131,7 +131,10 @@
                                 <td th:text="${item.listingDateString}">22</td>
                                 <td th:text="${item.lastTradeDateString}">22</td>
                                 <td th:text="${item.status == 1 ? '已发布' : '未发布'}">22</td>
+
                                 <td class="text-center">
+                                    <a class="publish" th:if="${item.status} eq '0'" th:attr="data-id=${item.id},data-status=1">发布</a>
+                                    <a class="publish" th:if="${item.status} eq '1'" th:attr="data-id=${item.id},data-status=0">取消发布</a>
                                     <a class="edit" th:attr="data-id=${item.id}">修改</a>
                                     <a class="delete" th:attr="data-id=${item.id}">删除</a>
                                 </td>
@@ -155,6 +158,25 @@
             opt.openWin('/house/create', '新增', 630, 430)
         });
     });
-    //
+    //修改房源 点击事件
+    $(".edit").on("click", function () {
+        var id = $(this).attr("data-id");
+        opt.openWin('/house/edit/' + id, '修改', 630, 430);
+    });
+    //删除房源信息
+    $(".delete").on("click", function () {
+        var id = $(this).attr("data-id");
+        opt.confirm('/house/delete/' + id);
+    });
+    //新增发布
+    //给发布和取消发布按钮绑定点击事件
+    $(".publish").on("click",function () {
+        //获取房源id
+        var id = $(this).attr("data-id");
+        //获取data-status的值,如果点击的是发布那么该值就是1，如果点击的是取消发布那么该值就是0
+        var status = $(this).attr("data-status");
+        //弹出确认框，点击确定就能发送请求
+        opt.confirm("/house/publish/" + id + "/" + status, "确定该操作吗？");
+    });
 </script>
 </html>
