--- a/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/frame/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<head th:include="common/head :: head"></head>-->
 <head>
-    <title>权限管理系统</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1"/>
     <meta name="renderer" content="webkit"/>
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-    <link rel="shortcut icon" th:href="@{favicon.ico}"/>
-    <link rel="shortcut icon" th:href="@{/static/favicon.ico}">
-    <link th:href="@{/static/css/bootstrap.min.css(v=3.3.7)}" rel="stylesheet">
-    <link th:href="@{/static/css/font-awesome.css(v=4.4.0)}" rel="stylesheet">
+    <title>尚好房平台管理系统</title>
 
-    <!-- Data Tables -->
-    <link th:href="@{/static/css/plugins/dataTables/dataTables.bootstrap.css}" rel="stylesheet">
+    <meta name="keywords" content="尚好房平台管理系统,后台HTML,响应式后台"/>
+    <meta name="description" content="尚好房平台管理系统,后台HTML,响应式后台"/>
 
-    <link th:href="@{/static/css/animate.css}" rel="stylesheet">
-    <link th:href="@{/static/css/style.css(v=4.1.0)}" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <meta http-equiv="refresh" content="0;ie.html"/>
+    <![endif]-->
 
-    <!-- 全局js -->
-    <script th:src="@{/static/js/jquery.min.js(v=2.1.4)}"></script>
-    <script th:src="@{/static/js/bootstrap.min.js(v=3.3.7)}"></script>
-    <script th:src="@{/static/js/plugins/jeditable/jquery.jeditable.js}"></script>
-    <!-- Data Tables -->
-    <script th:src="@{/static/js/plugins/dataTables/jquery.dataTables.js}"></script>
-    <script th:src="@{/static/js/plugins/dataTables/dataTables.bootstrap.js}"></script>
-
-    <!-- 弹出层js -->
-    <script th:src="@{/static/js/plugins/layer/layer.min.js}"></script>
-    <script th:src="@{/static/js/myLayer.js}"></script>
-
-    <!--数据校验js-->
-    <script th:src="@{/static/js/plugins/validate/jquery.validate.min.js}" type="text/javascript"></script>
-    <script th:src="@{/static/js/plugins/validate/messages_zh.min.js}" type="text/javascript"></script>
-
-    <script th:src="@{/static/js/plugins/layer/laydate/laydate.js}"></script>
+    <link rel="shortcut icon" th:href="@{/static/favicon.ico}"/>
+    <link th:href="@{/static/css/bootstrap.min.css(v=3.3.7)}" rel="stylesheet"/>
+    <link th:href="@{/static/css/font-awesome.min.css(v=4.4.0)}" rel="stylesheet"/>
+    <link th:href="@{/static/css/animate.css}" rel="stylesheet"/>
+    <link th:href="@{/static/css/style.css(v=4.1.0)}" rel="stylesheet"/>
+    <link th:href="@{/static/css/jquery.contextMenu.min.css}" rel="stylesheet"/>
 </head>
+
 <body class="fixed-sidebar full-height-layout gray-bg" style="overflow: hidden;">
 <div id="wrapper">
     <!--左侧导航开始-->
@@ -47,11 +31,14 @@
             <ul class="nav" id="side-menu">
                 <li class="nav-header">
                     <div class="dropdown profile-element">
-                        <span><img alt="image" class="img-circle" th:src="@{/static/img/profile_small.jpg}"/></span>
+                        <!--请求域中应该有admin，表示当前登录的用户信息-->
+                        <span><img alt="image" style="height: 50px;width: 50px" class="img-circle" th:src="${admin.headUrl}"/></span>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                            <span class="clear">
-                              <span class="block m-t-xs"><strong class="font-bold">Beaut-zihan</strong></span>
-                              <span class="text-muted text-xs block">超级管理员<b class="caret"></b></span>
+                              <span class="block m-t-xs"><strong class="font-bold" th:text="${admin.name}">Beaut-zihan</strong></span>
+                               <!--显示当前登录的用户的角色-->
+                               <!--请求域中还要有当前登录的用户的角色列表roleList-->
+                              <span class="text-muted text-xs block" th:each="role : ${roleList}" th:text="${role.roleName}"><b class="caret"></b></span>
                            </span>
                         </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
@@ -60,57 +47,25 @@
                             <li><a class="J_menuItem" href="javascript:">联系我们</a></li>
                             <li><a class="J_menuItem" href="javascript:">信箱</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">安全退出</a></li>
+                            <li><a href="/logout">安全退出</a></li>
                         </ul>
                     </div>
                     <div class="logo-element">H+</div>
                 </li>
-                <li>
+                <!--
+                    请求域中还应有当前用户的权限列表permissionList
+                -->
+                <li th:each="one: ${permissionList}">
                     <a href="#">
                         <i class="fa fa-home"></i>
-                        <span class="nav-label">权限管理</span>
+                        <span class="nav-label" th:text="${one.name}">系统管理</span>
                         <span class="fa arrow"></span>
                     </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <a class="J_menuItem" href="/admin" data-index="0">用户管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="/role">角色管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="index_v3.html">菜单管理</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-home"></i>
-                        <span class="nav-label">二手房管理</span>
-                        <span class="fa arrow"></span>
-                    </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <a class="J_menuItem" href="/dict" data-index="0">数字字典</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="/community">小区管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="/house">房源管理</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-home"></i>
-                        <span class="nav-label">会员管理</span>
-                        <span class="fa arrow"></span>
-                    </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <a class="J_menuItem" href="index_v1.html" data-index="0">超级会员</a>
-                        </li>
+                    <ul class="nav nav-second-level collapse">
+                        <li th:each="two,it: ${one.children}">
+                            <a class="J_menuItem" th:href="${two.url}"
+                               th:data-index="${it.count}"
+                               th:text="${two.name}">用户管理</a></li>
                     </ul>
                 </li>
             </ul>
@@ -126,8 +81,7 @@
                     </a>
                     <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
                         <div class="form-group">
-                            <input type="text" placeholder="请输入您需要查找的内容 …" class="form-control"
-                                   name="top-search"
+                            <input type="text" placeholder="请输入您需要查找的内容 …" class="form-control" name="top-search"
                                    id="top-search"/>
                         </div>
                     </form>
