--- a/web/web-admin/src/main/webapp/WEB-INF/templates/role/index.html
+++ b/web/web-admin/src/main/webapp/WEB-INF/templates/role/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>列表</title>
@@ -47,7 +48,7 @@
                                     onclick="javascript:document.forms.ec.pageNum.value=1;document.forms.ec.submit();">
                                 搜索
                             </button>
-                            <button type="button" class="btn btn-sm btn-primary create">新增</button>
+                            <button type="button" class="btn btn-sm btn-primary create" sec:authorize="hasAnyAuthority('role.create')">新增</button>
                             <button type="button" id="loading-example-btn"
                                     onclick="javascript:window.location.reload();" class="btn btn-white btn-sm">刷新
                             </button>
@@ -71,9 +72,9 @@
                                 <td th:text="${item.description}">33</td>
                                 <td th:text="${#dates.format(item.createTime,'yyyy-MM-dd HH:mm:ss')}">33</td>
                                 <td class="text-center">
-                                    <a class="edit" th:attr="data-id=${item.id}">修改</a>
-                                    <a class="delete" th:attr="data-id=${item.id}">删除</a>
-                                    <a class="assgin" th:attr="data-id=${item.id}">分配权限</a>
+                                    <a class="edit" th:attr="data-id=${item.id}" sec:authorize="hasAnyAuthority('role.edit')">修改</a>
+                                    <a class="delete" th:attr="data-id=${item.id}" sec:authorize="hasAnyAuthority('role.delete')">删除</a>
+                                    <a class="assgin" th:attr="data-id=${item.id}" sec:authorize="hasAnyAuthority('role.assign')">分配权限</a>
                                 </td>
                             </tr>
                             </tbody>
